--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,43 +26,30 @@
 
 <section class="sectionbody">
 
-  <div class="row">
-    <div class="col-lg-5">
-      <section class="sectionbody2">
-        <div class=" p-4 mt-5 ">
-          <div class="header2">
-            <h1 class="mt-5"></h1>
-          </div>
-          <div class="header2">
-            <h6 class="mt-5"></h6>
-          </div>
-        </div>
-      </section>
-    </div>
-    <div class="col-lg-5">
+  <div class="posisao">
+    <div class="row">
+      <div class="col-md-3">
+        <!-- <img src="../assets/images/logoesse.svg" alt=""> -->
+      </div>
 
-      <div class="row">
-        <div clas="containerlogo ">
-          <img clas="imglogo " src="../assets/images/logoesse.svg" alt="Marca">
-        </div>
+      <div class="col-md-3">
+        <img src="../assets/images/logoesse.svg" alt="">
+      </div>
+
+      <div class="col-md-3">
+        <!-- <img src="../assets/images/logoesse.svg" alt=""> -->
+
+
+      </div>
+
+      <div class="col-md-3">
+        <!-- <img src="../assets/images/logoesse.svg" alt=""> -->
       </div>
 
 
-      <section class="sectionbody2 text-center ">
-        <div>
-          <div class="header2">
-            <h1> Rafaely Sueth</h1>
-          </div>
-          <div class="header2 ">
-            <h6>Beauty Artist</h6>
-          </div>
-
-
-
-        </div>
-      </section>
     </div>
   </div>
+
 
 
   <section class="mt-5 text-center sectionbody2">
